[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fonts/pottaone-regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/player/walk/(3).png" type="Texture" id=2]
[ext_resource path="res://assets/player/walk/(4).png" type="Texture" id=3]
[ext_resource path="res://assets/player/walk/(8).png" type="Texture" id=4]
[ext_resource path="res://assets/player/walk/(1).png" type="Texture" id=5]
[ext_resource path="res://assets/player/walk/(2).png" type="Texture" id=6]
[ext_resource path="res://assets/player/walk/(6).png" type="Texture" id=7]
[ext_resource path="res://assets/player/walk/(10).png" type="Texture" id=8]
[ext_resource path="res://assets/player/walk/(5).png" type="Texture" id=9]
[ext_resource path="res://assets/player/walk/(7).png" type="Texture" id=10]
[ext_resource path="res://assets/player/walk/(9).png" type="Texture" id=11]
[ext_resource path="res://src/screens/log_checker/login_checker.gd" type="Script" id=12]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 10 ), ExtResource( 4 ), ExtResource( 11 ), ExtResource( 8 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.164706, 0.470588, 1 )

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -149.5
margin_top = 71.9708
margin_right = 149.5
margin_bottom = 174.971
custom_fonts/font = SubResource( 1 )
text = "Loading"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 524.106, 213.861 )
scale = Vector2( 0.385, 0.394 )
frames = SubResource( 2 )
frame = 1
speed_scale = 2.0
playing = true

[node name="Timer" type="Timer" parent="."]

[node name="auto_login" type="HTTPRequest" parent="."]

[node name="get_document" type="HTTPRequest" parent="."]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="request_completed" from="auto_login" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="request_completed" from="get_document" to="." method="_on_get_document_request_completed"]
